# sluice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  justfile  release-plz.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-binaries.yml  release-plz.yml
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/benches/: parse.rs
crates/core/examples/: gen_fixture.rs
crates/core/src/: error.rs  lib.rs
crates/core/src/domain/: document.rs  field.rs  flags.rs  header.rs  mod.rs  record.rs  uinfo.rs
crates/core/src/parser/: document.rs  mod.rs  primitives.rs
crates/core/tests/: fixture_chunk.rs  synthetic.rs
crates/core/tests/snapshots/: fixture_chunk__first_10_na_adds.snap
docs/: benchmark.md  binary-format.md  incremental-updates.md
scripts/: bench-throughput.sh  compare-correctness.sh  fetch-chunk.sh  setup-java-benchmark.sh
scripts/java/: DumpIndex.java
