[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.lints.rust]
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
