[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Nico Carl"]
repository = "https://github.com/nicarl/sluice"
homepage = "https://github.com/nicarl/sluice"
keywords = ["maven", "parser", "index", "nexus"]
categories = ["parser-implementations", "encoding"]

[workspace.lints.rust]
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
