[package]
name = "maven-index-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI that parses Maven Central index chunks into JSON Lines."

[[bin]]
name = "maven-index-parser"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
maven-index-core = { path = "../core", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
