[package]
name = "sluice-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "CLI that parses Maven Central index chunks into JSON Lines."

[[bin]]
name = "sluice"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sluice = { path = "../core", version = "0.1.0", package = "sluice-rs", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
