[package]
name = "maven-index-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure-Rust parser for the Maven Central binary index format."

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "1"
cesu8 = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
flate2 = "1"
insta = "1"
