[package]
name = "sluice"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
description = "Pure-Rust parser for the Maven Central binary index format."

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
thiserror = "1"
cesu8 = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
flate2 = "1"
insta = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
